# profile.ivi.ico-vic-amb-plugin

./: CMakeLists.txt  LICENSE  README
packaging/: ico-vic-amb-plugin.changes  ico-vic-amb-plugin.spec
packaging.in/: config.tizen-ico
src/: AMBformat.conf  CMakeLists.txt  abstractconfig.cc  abstractconfig.h  ambconfig.cc  ambconfig.h  ambinterface.cc  ambinterface.h  common.h  config.cc  config.h  controlwebsocket.cc  controlwebsocket.h  convert.cc  convert.h  datamessage.cc  datamessage.h  eventmessage.cc  eventmessage.h  messageformat.h  mwinterface.cc  mwinterface.h  standardmessage.cc  standardmessage.h  viccommunicator.cc  viccommunicator.h
tests/: AMBformat.conf  CMakeLists.txt  app1.cc  checkinterspace.awk  checkresult.sh  configamb.cc  configamb.h  controlwebsocketclient.cc  controlwebsocketclient.h  controlwebsocketclientapp.cc  controlwebsocketclientapp.h  dbustest1.cc  dbustest3.cc  logresult.cc  logresult.h  mwscenario.cc  scenarioengine.cc  scenarioengine.h  standardjsonmessage.cc  standardjsonmessage.h  standardvehicleinfo.txt  startTestSuite.sh  vic1.cc  vic3.cc  vicreset.cc  vicseq.cc  websocketscenario.cc
tests/etc/ambd/: AMBformat_wrong1.conf  AMBformat_wrong10.conf  AMBformat_wrong11.conf  AMBformat_wrong12.conf  AMBformat_wrong13.conf  AMBformat_wrong14.conf  AMBformat_wrong2.conf  AMBformat_wrong3.conf  AMBformat_wrong4.conf  AMBformat_wrong5.conf  AMBformat_wrong6.conf  AMBformat_wrong7.conf  AMBformat_wrong8.conf  AMBformat_wrong9.conf  config  config.wrong  config.wrong10  config.wrong11  config.wrong12  config.wrong13  config.wrong14  config.wrong15  config.wrong2  config.wrong3  config.wrong4  config.wrong5  config.wrong6  config.wrong7  config.wrong8  config.wrong9
tool/: CMakeLists.txt  ico_set_vehicleinfo.c
